# RKNN3_PaddleOCRVL

./: README.md
python_binding/: BUILD_AND_TEST.md  CMakeLists.txt  COMPILE_PLANS.md  README.md  README_CS_Demo.md  build.sh  build_local.sh  debug_blocks.py  demo.py  paddleocr_vl_client.py  paddleocr_vl_server.py  pipeline.py  pybind_module.cc  run_pipeline.py  test_paddleocr_vl_lib.py
python_binding/PP-DocLayoutV2_onnx/: README.md  export_rknn.py  infer_onnx.py  infer_visualize.py
python_binding/output/: 00_Rockchip_RK182X_ReleaseNote_RKNN3_SDK_V1.0.0_CN.html  00_Rockchip_RK182X_ReleaseNote_RKNN3_SDK_V1.0.0_CN.json  00_Rockchip_RK182X_ReleaseNote_RKNN3_SDK_V1.0.0_CN.md  page0_scale2.0_pymupdf.html  page0_scale2.0_pymupdf.json  page0_scale2.0_pymupdf.md
python_binding/pipeline/: __init__.py  doc_layout_runner.py  label_mapping.py  metrics_aggregator.py  pages_parser.py  result.py  vlm_runner.py  vlm_runner_so.py
python_binding/tests/: conftest.py  test_label_mapping.py  test_metrics_aggregator.py  test_pages_parser.py  test_pipeline_e2e.py  test_result.py  test_vlm_runner_so.py
